--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dev = [
 ]
 docs = [
     "sphinx>=7.0",
-    "sphinx-rtd-theme>=2.0",
+    "furo>=2024.1.29",
     "sphinx-autodoc-typehints>=1.24",
     "myst-parser>=2.0",
 ]
